--- a/styles/bus-dating.css
+++ b/styles/bus-dating.css
@@ -9,25 +9,34 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
 	font-family: sans-serif;
 }
 
-.header {
+.bar.-header {
+	top: 0;
+}
+
+.bar.-footer {
+	bottom: 0;
+}
+
+.bar {
 	background: var(--blue);
 	color: white;
 	position: fixed;
-	top: 0;
 	left: 0;
 	width: 100%;
 	height: 48px;
+	padding: 0 8px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
 
-.header-icon {
+.bar-icon {
 	padding: 12px;
 }
