second pass on chat message bar w pseudo selectors

--- a/styles/bus-dating.css
+++ b/styles/bus-dating.css
@@ -4,7 +4,9 @@
 
 :root {
 	--blue: #5e83e2;
+	--blue-darken: #464ec7;
 	--silver: #c4c4c4;
+	--jet: #242424;
 	--font-content: "Work Sans", sans-serif;
 }
 
