first pass on message styles

--- a/styles/bus-dating.css
+++ b/styles/bus-dating.css
@@ -8,6 +8,7 @@
 	--green: #65A164;
 	--green-darken: #3A824E;
 	--silver: #C4C4C4;
+	--gray: #666666;
 	--jet: #242424;
 	--font-content: "Work Sans", sans-serif;
 }
