--- a/styles/chat.css
+++ b/styles/chat.css
@@ -5,6 +5,29 @@
 
 .messages {
 	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: flex-start;
+	padding: 32px 16px;
+}
+
+.message {
+	display: inline-block;
+	max-width: 75%;
+	padding: 8px 12px;
+	background: var(--silver);
+	color: var(--gray);
+	font-weight: 500;
+	line-height: 1.25;
+	margin-bottom: 2px;
+	border-radius: 8px;
+}
+
+.message.-user {
+	background: var(--blue);
+	color: white;
+	margin-left: auto;
 }
 
 .message-bar {
