--- a/styles/bus-dating.css
+++ b/styles/bus-dating.css
@@ -23,6 +23,11 @@ input, button, body {
 	font-family: var(--font-content);
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
 body {
 	background: #e5e5e5;
 }
