--- a/styles/bus-dating.css
+++ b/styles/bus-dating.css
@@ -7,9 +7,15 @@
 
 :root {
 	--blue: #5E83E2;
-	--blue-darken: #4669C3;
+	--blue-dark: #4669C3;
+	--blue-light: #96BAFE;
 	--green: #65A164;
-	--green-darken: #3A824E;
+	--green-dark: #3A824E;
+	--green-light: #9DE17D;
+	--yellow: #FFE600;
+	--yellow-dark: #BD8210;
+	--red: #D72645;
+	--red-light: #F47BA7;
 	--silver: #C4C4C4;
 	--lightgray: #999999;
 	--gray: #666666;
@@ -71,7 +77,7 @@ body {
 
 .map {
 	background: var(--green);
-	color: var(--green-darken);
+	color: var(--green-dark);
 	position: relative;
 	top: 48px;
 	height: 240px;
