changed color yellow

--- a/styles/bus-dating.css
+++ b/styles/bus-dating.css
@@ -12,7 +12,7 @@
 	--green: #65A164;
 	--green-dark: #3A824E;
 	--green-light: #9DE17D;
-	--yellow: #FFE600;
+	--yellow: #FDD366;
 	--yellow-dark: #BD8210;
 	--red: #D72645;
 	--red-light: #F47BA7;
