--- a/styles/bus-dating.css
+++ b/styles/bus-dating.css
@@ -15,7 +15,7 @@
 	--yellow: #FDD366;
 	--yellow-dark: #BD8210;
 	--red: #D72645;
-	--red-light: #F47BA7;
+	--red-light: #FF8EA2;
 	--silver: #C4C4C4;
 	--lightgray: #999999;
 	--gray: #666666;
