--- a/styles/report.css
+++ b/styles/report.css
@@ -1,53 +1,39 @@
-.report {
-    position: relative;
-    top: 48px;
-    background-color: white;
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    border-radius: 10px;
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	margin: 0 16px;
+	padding: 32px 8px 8px;
+	border-bottom: thin solid var(--color-outline);
+}
+
+.headings {
+	display: flex;
+	flex-direction: column;
+	order: 2;
 }
 
 .title {
-    background-color: var(--blue);
-    height: 32px;
-    border-radius: 10px 10px 0 0;
-    text-align: center;
-    line-height: 32px;
-    color: white;
+	color: var(--color-title);
+	font-size: 2em;
+	line-height: 1;
+	order: 2;
 }
 
-.text {
-    margin-left: 16px;
-    color: var(--gray);
-    margin-top: 16px;
+.subtitle {
+	color: var(--color-subtitle);
+	font-size: 1em;
 }
 
-.choice {
-    margin-top: 12px;
-    margin-left: 24px;
+.back {
+	color: var(--color-content);
+	font-size: 0.875em;
+	font-weight: bold;
+	display: flex;
+	align-items: center;
 }
 
-.radio-button {
-    margin-bottom: 8px;
-    color: var(--silver);
-}
-
-.content {
-    padding-bottom: 16px;
-}
-
-.submit {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    width: 108px;
-    background-color: var(--blue);
-    border-radius: 10px;
-    float: right;
-    margin-right: 16px;
-    margin-top: 16px;
-    color: white;
+.back .material-icons {
+	margin-left: -8px;
+	margin-right: -2px;
 }
