--- a/styles/report.css
+++ b/styles/report.css
@@ -9,12 +9,13 @@ input[type="radio"] {
 .card {
 	background: var(--color-input);
 	color: var(--color-content);
-	border: 2px solid var(--color-outline);
+	border: 1px solid var(--color-outline);
 	border-radius: 4px;
 	padding: 12px;
 	margin-top: 8px;
-	display: block;
-	font-weight: 500;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .card-name {
@@ -25,15 +26,44 @@ input[type="radio"] {
 	display: block;
 }
 
-.card-text {
+.card-desc {
 	display: block;
 	font-size: 0.875em;
 	margin-top: 2px;
 }
 
+.card-radio {
+	background: var(--color-disable);
+	border: thin solid var(--color-outline);
+	display: block;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	position: relative;
+}
+
+.card-radio .material-icons {
+	font-size: 16px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: none;
+}
+
 input[type="radio"]:checked + .card {
 	background: var(--color-lightgreen);
 	color: var(--color-green);
-	border-color: var(--green);
-	border-width: 2px;
+	border-color: var(--color-green);
+	box-shadow: 0 0 0 1px var(--color-green);
+}
+
+input[type="radio"]:checked + .card .card-radio {
+	background: var(--color-green);
+	border-color: var(--color-green);
+	color: white;
+}
+
+input[type="radio"]:checked + .card .card-radio .material-icons {
+	display: block;
 }
