--- a/styles/bus-dating.css
+++ b/styles/bus-dating.css
@@ -124,6 +124,7 @@ h2 {
 .button {
 	background: var(--color-blue);
 	color: white;
+	font-size: 1em;
 	font-weight: bold;
 	width: 100%;
 	height: 48px;
