--- a/styles/chat.css
+++ b/styles/chat.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	position: relative;
-	height: calc(100vh - 96px);
+	height: calc(100vh - var(--header-height));
 }
 
 .messages {
