--- a/styles/chat.css
+++ b/styles/chat.css
@@ -96,7 +96,7 @@
 
 .message-bar {
 	display: flex;
-	margin: 16px;
+	margin: 8px;
 	padding: 4px;
 	border-radius: 20px;
 	background: var(--color-input);
@@ -105,6 +105,7 @@
 }
 
 .message-bar:focus-within {
+	background: white;
 	border-color: var(--color-blue);
 }
 
